--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 torch==2.2.0
 torchvision==0.17.0
-torchmetrics
+torchaudio==2.2.0
+soundfile
+Ipython
 numpy==1.26.4
+torch_audiomentations
 tqdm
 matplotlib
 pandas
 wandb
-comet_ml
 hydra-core
 
 black
