--- a/src/configs/baseline.yaml
+++ b/src/configs/baseline.yaml
@@ -1,30 +1,32 @@
 defaults:
-  - model: baseline
-  - writer: wandb
-  - metrics: example
-  - datasets: train_val_test
-  - dataloader: example
-  - transforms: example
+  - model: null
+  - metrics: null 
+  - device: null
+  - datasets: librispeech
+  - dataloader: basic
+  - writer: null
+  - transforms: null
   - _self_
+text_encoder:
+  _target_: src.text_encoder.CTCTextEncoder
 optimizer:
-  _target_: torch.optim.Adam
+  _target_: torch.optim.AdamW
   lr: 3e-4
 lr_scheduler:
-  _target_: torch.optim.lr_scheduler.StepLR
-  gamma: 0.9
-  step_size: ${trainer.epoch_len}
-loss_function:
-  _target_: src.loss.CTCLoss
+  _target_: torch.optim.lr_scheduler.OneCycleLR
+  max_lr: 1e-2
+  pct_start: 0.1
+  steps_per_epoch: ${trainer.epoch_len}
+  epochs: ${trainer.n_epochs}
+  anneal_strategy: cos
+# loss_function:
+#   _target_: src.loss.CTCLossWrapper
 trainer:
-  log_step: 50
-  n_epochs: 100
-  epoch_len: 500
-  device_tensors: ["audio", "transcription"] # which tensors should be on device (ex. GPU)
-  resume_from: null # null or path to the checkpoint dir with *.pth and config.yaml
-  device: auto # Change
-  override: False # if True, will override the previous run with the same name
-  monitor: "max test_MulticlassAccuracy" # "off" or "max/min metric_name", i.e. our goal is to maximize/minimize metric
-  save_period: 5 # checkpoint each save_period epochs in addition to the best epoch
-  early_stop: ${trainer.n_epochs} # epochs for early stopping
-  save_dir: "saved"
-  seed: 1
+  n_epochs: 50
+  epoch_len: 200
+  skip_oom: null
+  max_audio_length: 20.0
+  max_text_length: 100
+  dataset_partition: "test"
+  device: auto
+  base_sample_rate: 16000
