--- a/src/configs/baseline.yaml
+++ b/src/configs/baseline.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - model: null
+  - model: baseline
   - metrics: null 
   - device: null
   - datasets: librispeech
@@ -19,8 +19,8 @@ lr_scheduler:
   steps_per_epoch: ${trainer.epoch_len}
   epochs: ${trainer.n_epochs}
   anneal_strategy: cos
-# loss_function:
-#   _target_: src.loss.CTCLossWrapper
+loss_function:
+  _target_: src.loss.CTCLossWrapper
 trainer:
   n_epochs: 50
   epoch_len: 200
@@ -28,5 +28,7 @@ trainer:
   max_audio_length: 20.0
   max_text_length: 100
   dataset_partition: "test"
-  device: auto
+  device: "cuda:0"
   base_sample_rate: 16000
+  device_tensors: ["spectorgram", "input_lengths", "text_encoded_lengths", "text_encoded"]
+  n_fft: 1000
