--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.12"
 dependencies = [
     "black>=25.9.0",
     "datasets>=4.1.1",
+    "editdistance>=0.8.1",
+    "einops>=0.8.1",
     "hydra-core>=1.3.2",
     "ipython>=9.5.0",
     "isort>=6.0.1",
