--- a/src/configs/model/conformer.yaml
+++ b/src/configs/model/conformer.yaml
@@ -12,4 +12,4 @@ attention_dropout: 0.1
 ffn_dropout: 0.1
 ffn_expansion_factor: 4
 conv_expansion_factor: 2
-is_subsample: False
+do_downsample: True
