--- a/src/configs/baseline.yaml
+++ b/src/configs/baseline.yaml
@@ -1,13 +1,11 @@
 defaults:
   - model: conformer
-  - metrics: BeamSearch 
-  - datasets: librispeech
+  - writer: wandb
+  - metrics: basic
+  - datasets: basic
   - dataloader: basic
-  - writer: null
-  - transforms: null
+  - transforms: example_only_instance
   - _self_
-text_encoder:
-  _target_: src.text_encoder.CTCTextEncoder
 optimizer:
   _target_: torch.optim.AdamW
   lr: 3e-4
@@ -15,20 +13,23 @@ lr_scheduler:
   _target_: torch.optim.lr_scheduler.OneCycleLR
   max_lr: 1e-2
   pct_start: 0.1
-  steps_per_epoch: ${trainer.epoch_len}
+  # steps_per_epoch: ${trainer.epoch_len}
   epochs: ${trainer.n_epochs}
   anneal_strategy: cos
 loss_function:
   _target_: src.loss.CTCLossWrapper
+text_encoder:
+  _target_: src.text_encoder.CTCTextEncoder
 trainer:
-  n_epochs: 250
-  epoch_len: 200
-  skip_oom: null
-  max_audio_length: 20.0 #???
-  max_text_length: 100
-  dataset_partition: "test"
-  device: "cuda:0"
-  base_sample_rate: 16000
-  device_tensors: ["spectorgram", "spectogram_lengths", "text_encoded_lengths", "text_encoded"]
-  hop_length: 128
-  n_fft: 1024
+  log_step: 50
+  n_epochs: 50
+  # epoch_len: 20
+  device_tensors: ["spectrogram", "text_encoded"] # which tensors should be on device (ex. GPU)
+  resume_from: null # null or path to the checkpoint dir with *.pth and config.yaml
+  device: auto # device name or "auto"
+  override: True # if True, will override the previous run with the same name
+  monitor: "min val_WER_(Argmax)" # "off" or "max/min metric_name", i.e. our goal is to maximize/minimize metric
+  save_period: 5 # checkpoint each save_period epochs in addition to the best epoch
+  early_stop: ${trainer.n_epochs} # epochs for early stopping
+  save_dir: "saved"
+  seed: 1
