--- a/src/configs/writer/wandb.yaml
+++ b/src/configs/writer/wandb.yaml
@@ -1,5 +1,5 @@
 _target_: src.logger.WandBWriter
-project_name: "pytorch_template_asr_example"
+project_name: "test_run_2"
 entity: null
 run_name: "testing"
 mode: "online"
