--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "comet-ml>=3.53.1",
     "datasets>=4.2.0",
     "editdistance>=0.8.1",
+    "einops>=0.8.1",
     "hydra-core>=1.3.2",
     "isort>=6.1.0",
     "matplotlib>=3.10.7",
