--- a/src/configs/baseline.yaml
+++ b/src/configs/baseline.yaml
@@ -2,9 +2,10 @@ defaults:
   - model: conformer
   - writer: wandb
   - metrics: basic
-  - datasets: basic
-  - dataloader: basic
+  - datasets: onebatchtest
+  - dataloader: onebatchtest
   - transforms: example_only_instance
+  - text_encoder: CTCEncoder
   - _self_
 optimizer:
   _target_: torch.optim.AdamW
@@ -18,19 +19,18 @@ lr_scheduler:
   anneal_strategy: cos
 loss_function:
   _target_: src.loss.CTCLossWrapper
-text_encoder:
-  _target_: src.text_encoder.CTCTextEncoder
 trainer:
   log_step: 50
-  n_epochs: 50
+  n_epochs: 250
   # epoch_len: 20
   device_tensors: ["spectrogram", "text_encoded"] # which tensors should be on device (ex. GPU)
   resume_from: null # null or path to the checkpoint dir with *.pth and config.yaml
   device: auto # device name or "auto"
-  override: True # if True, will override the previous run with the same name
-  monitor: "min val_WER_(Argmax)" # "off" or "max/min metric_name", i.e. our goal is to maximize/minimize metric
+  override: False # if True, will override the previous run with the same name
+  monitor: "off" # "off" or "max/min metric_name", i.e. our goal is to maximize/minimize metric
   save_period: 5 # checkpoint each save_period epochs in addition to the best epoch
   early_stop: ${trainer.n_epochs} # epochs for early stopping
   save_dir: "saved"
   seed: 1
-  grad_acum: 5
+  grad_acum: 1
+  sample_rate: 16000
