--- a/src/configs/datasets/basic.yaml
+++ b/src/configs/datasets/basic.yaml
@@ -1,11 +1,7 @@
 train:
   _target_: src.datasets.LibrispeechDataset
-  part: "test-other"
+  part: "train-clean-100"
   instance_transforms: ${transforms.instance_transforms.train}
-val:
-  _target_: src.datasets.LibrispeechDataset
-  part: "train-other-500"
-  instance_transforms: ${transforms.instance_transforms.inference}
 test:
   _target_: src.datasets.LibrispeechDataset
   part: "test-clean"
