--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ dependencies = [
     "editdistance>=0.8.1",
     "einops>=0.8.1",
     "hydra-core>=1.3.2",
+    "ipykernel>=7.0.0",
     "isort>=6.1.0",
+    "librosa>=0.11.0",
     "matplotlib>=3.10.7",
     "numpy==1.26.4",
     "pandas>=2.3.3",
