--- a/src/configs/transforms/instance_transforms/example.yaml
+++ b/src/configs/transforms/instance_transforms/example.yaml
@@ -5,10 +5,10 @@ train:
     hop_length: 128
     n_fft: 1024
     n_mels: ${model.model_dim}
-  audio: # name of the tensor on which we apply transform
-    _target_: torchvision.transforms.v2.Compose
-    transforms:
-      - _target_: src.transforms.wav_augs.Gain
+  # audio: # name of the tensor on which we apply transform
+  #   _target_: torchvision.transforms.v2.Compose
+  #   transforms:
+  #     - _target_: src.transforms.wav_augs.Gain
 inference:
   get_spectrogram:
     _target_: torchaudio.transforms.MelSpectrogram
