--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "audiomentations>=0.43.1",
     "black>=25.9.0",
     "comet-ml>=3.53.1",
     "datasets>=4.2.0",
