--- a/src/configs/datasets/basic.yaml
+++ b/src/configs/datasets/basic.yaml
@@ -1,6 +1,7 @@
 train:
   _target_: src.datasets.LibrispeechDataset
-  part: "train-clean-100"
+  # part: "train-clean-100"
+  part: "test-clean"
   instance_transforms: ${transforms.instance_transforms.train}
 test:
   _target_: src.datasets.LibrispeechDataset
