--- a/src/configs/datasets/onebatchtest.yaml
+++ b/src/configs/datasets/onebatchtest.yaml
@@ -7,7 +7,7 @@ train:
   instance_transforms: ${transforms.instance_transforms.train}
 # we filter partitions in one batch test to check the pipeline
 # do not filter test dataset, you want to evaluate on the whole dataset
-val:
+test:
   _target_: src.datasets.LibrispeechDataset
   part: "dev-clean"
   max_audio_length: 20.0
