Implemented wav_augs and spec_augs. Addnoise didnt implement. Only llm support is left. Started training

--- a/src/configs/datasets/train_clean_360.yaml
+++ b/src/configs/datasets/train_clean_360.yaml
@@ -1,7 +1,6 @@
 train:
   _target_: src.datasets.LibrispeechDataset
-  # part: "train-clean-100"
-  part: "test-clean"
+  part: "train-clean-360"
   instance_transforms: ${transforms.instance_transforms.train}
 test:
   _target_: src.datasets.LibrispeechDataset
