--- a/src/configs/model/conformer.yaml
+++ b/src/configs/model/conformer.yaml
@@ -1,10 +1,10 @@
 _target_: src.model.Conformer
-model_dim: 132
+input_dim: ${transforms.instance_transforms.train.get_spectrogram.n_mels}
+model_dim: 144
 num_attention_heads: 4
-enc_dim: 16
 dim_head: 64
 conv_kernel_size: 31
-num_conformer_blocks: 4
+num_conformer_blocks: 16
 input_dropout: 0.1
 conv_dropout: 0.1
 attention_dropout: 0.1
