--- a/src/configs/script_local.yaml
+++ b/src/configs/script_local.yaml
@@ -12,21 +12,21 @@ partition_for_bpe:
   part: "train-clean-100"
 optimizer:
   _target_: torch.optim.AdamW
-  lr: 1e-4
   betas: [0.9, 0.98]
   weight_decay: 1e-6
   eps: 1e-9
 lr_scheduler:
-  _target_: torch.optim.lr_scheduler.LambdaLR
-  lr_lambda:
-    _target_: src.scheduler.lr_by_step
-    warmup_steps: 10000
-    model_dim: ${model.model_dim}
+  _target_: torch.optim.lr_scheduler.OneCycleLR
+  max_lr: 0.0042
+  pct_start: 0.15
+  epochs: ${trainer.n_epochs}
+  anneal_strategy: cos
 loss_function:
   _target_: src.loss.CTCLossWrapper
 trainer:
   log_step: 50
-  n_epochs: 50
+  n_epochs: 12
+  # epoch_len: 100
   device_tensors: ["spectrogram", "text_encoded"] # which tensors should be on device (ex. GPU)
   resume_from: null # null or path to the checkpoint dir with *.pth and config.yaml
   device: auto # device name or "auto"
@@ -39,3 +39,4 @@ trainer:
   grad_acum: 8
   sample_rate: ${transforms.instance_transforms.train.get_spectrogram.sample_rate}
   show_augs: False
+  max_grad_norm: 5.0
