--- a/src/configs/script_local.yaml
+++ b/src/configs/script_local.yaml
@@ -4,7 +4,7 @@ defaults:
   - metrics: ArgMax_BeamSearch
   - datasets: train_all
   - dataloader: local
-  - transforms: both
+  - transforms: basic
   - text_encoder: CTCEncoder
   - _self_
 partition_for_bpe:
@@ -25,7 +25,7 @@ loss_function:
   _target_: src.loss.CTCLossWrapper
 trainer:
   log_step: 50
-  n_epochs: 12
+  n_epochs: 20
   # epoch_len: 100
   device_tensors: ["spectrogram", "text_encoded"] # which tensors should be on device (ex. GPU)
   resume_from: null # null or path to the checkpoint dir with *.pth and config.yaml
