--- a/src/configs/script_local.yaml
+++ b/src/configs/script_local.yaml
@@ -16,11 +16,17 @@ optimizer:
   weight_decay: 1e-6
   eps: 1e-9
 lr_scheduler:
-  _target_: torch.optim.lr_scheduler.OneCycleLR
+  _target_: torch.optim.lr_scheduler.CyclicLR
+  base_lr: 0.0005
   max_lr: 0.0042
-  pct_start: 0.15
-  epochs: ${trainer.n_epochs}
-  anneal_strategy: cos
+  cycle_momentum: False
+# lr_scheduler:
+#   _target_: torch.optim.lr_scheduler.OneCycleLR
+#   initial_lr: 0.0005
+#   max_lr: 0.0042
+#   pct_start: 0.1
+#   epochs: ${trainer.n_epochs}
+#   anneal_strategy: cos
 loss_function:
   _target_: src.loss.CTCLossWrapper
 trainer:
@@ -36,7 +42,7 @@ trainer:
   early_stop: ${trainer.n_epochs} # epochs for early stopping
   save_dir: "saved"
   seed: 1
-  grad_acum: 8
+  grad_acum: 1
   sample_rate: ${transforms.instance_transforms.train.get_spectrogram.sample_rate}
   show_augs: False
   max_grad_norm: 5.0
