--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "torchmetrics==1.8.2",
     "torchvision==0.17.0",
     "tqdm==4.67.1",
+    "transformers>=4.57.1",
     "wandb==0.22.2",
     "wget==3.2",
 ]
