--- a/src/configs/script_local.yaml
+++ b/src/configs/script_local.yaml
@@ -2,7 +2,7 @@ defaults:
   - model: conformer
   - writer: wandb
   - metrics: ArgMax_BeamSearch
-  - datasets: train_all
+  - datasets: train_clean_360
   - dataloader: local
   - transforms: basic
   - text_encoder: CTCEncoder
@@ -12,26 +12,21 @@ partition_for_bpe:
   part: "train-clean-100"
 optimizer:
   _target_: torch.optim.AdamW
+  lr: 1e-4
   betas: [0.9, 0.98]
   weight_decay: 1e-6
   eps: 1e-9
 lr_scheduler:
-  _target_: torch.optim.lr_scheduler.CyclicLR
-  base_lr: 0.0005
+  _target_: torch.optim.lr_scheduler.OneCycleLR
   max_lr: 0.0042
-  cycle_momentum: False
-# lr_scheduler:
-#   _target_: torch.optim.lr_scheduler.OneCycleLR
-#   initial_lr: 0.0005
-#   max_lr: 0.0042
-#   pct_start: 0.1
-#   epochs: ${trainer.n_epochs}
-#   anneal_strategy: cos
+  pct_start: 0.15
+  epochs: ${trainer.n_epochs}
+  anneal_strategy: cos
 loss_function:
   _target_: src.loss.CTCLossWrapper
 trainer:
   log_step: 50
-  n_epochs: 20
+  n_epochs: 3
   # epoch_len: 100
   device_tensors: ["spectrogram", "text_encoded"] # which tensors should be on device (ex. GPU)
   resume_from: null # null or path to the checkpoint dir with *.pth and config.yaml
@@ -42,7 +37,6 @@ trainer:
   early_stop: ${trainer.n_epochs} # epochs for early stopping
   save_dir: "saved"
   seed: 1
-  grad_acum: 1
+  grad_acum: 4
   sample_rate: ${transforms.instance_transforms.train.get_spectrogram.sample_rate}
   show_augs: False
-  max_grad_norm: 5.0
