--- a/src/configs/text_encoder/BpeEncoderWithLLM.yaml
+++ b/src/configs/text_encoder/BpeEncoderWithLLM.yaml
@@ -1,9 +1,9 @@
 #doesnt work yet
 _target_: src.text_encoder.BpeEncoder
 vocab_size: 40
-beam_size: 6
-beam_depth: 2
+beam_size: 100
+beam_depth: 1
 take_first_chars: 5
 llm_model:
   _target_: src.text_encoder.LLMToScore
-  device: "auto"
+  device: "cuda"
