--- a/src/configs/script_kaggle_2.yaml
+++ b/src/configs/script_kaggle_2.yaml
@@ -32,7 +32,7 @@ trainer:
   resum_from: null # null or path to the checkpoint dir with *.pth and config.yaml
   device: auto # device name or "auto"
   override: False # if True, will override the previous run with the same name
-  monitor: "min WER_(BeamSearch)_test" # "off" or "max/min metric_name", i.e. our goal is to maximize/minimize metric
+  monitor: "min test_WER_(BeamSearch)" # "off" or "max/min metric_name", i.e. our goal is to maximize/minimize metric
   save_period: 1 # checkpoint each save_period epochs in addition to the best epoch
   early_stop: ${trainer.n_epochs} # epochs for early stopping
   save_dir: "saved"
