first script finished. Going to start training again

--- a/src/configs/writer/wandb.yaml
+++ b/src/configs/writer/wandb.yaml
@@ -1,5 +1,5 @@
 _target_: src.logger.WandBWriter
-project_name: HW_ASR
+project_name: HW_ASR_FINAL
 entity: null
 run_name: "testing"
 mode: "online"
