--- a/src/configs/train_1.yaml
+++ b/src/configs/train_1.yaml
@@ -4,12 +4,9 @@ defaults:
   - metrics: ArgMax_BeamSearch
   - datasets: train_clean_360
   - dataloader: kaggle
-  - transforms: basic
+  - transforms: batch_transforms
   - text_encoder: BpeEncoder
   - _self_
-partition_for_bpe:
-  _target_: src.datasets.LibrispeechDataset
-  part: "train-clean-100"
 optimizer:
   _target_: torch.optim.AdamW
   lr: 1e-4
@@ -26,7 +23,7 @@ loss_function:
   _target_: src.loss.CTCLossWrapper
 trainer:
   log_step: 50
-  n_epochs: 18
+  n_epochs: 12 
   # epoch_len: 100
   device_tensors: ["spectrogram", "text_encoded"] # which tensors should be on device (ex. GPU)
   resume_from: null # null or path to the checkpoint dir with *.pth and config.yaml
