--- a/src/configs/train_1.yaml
+++ b/src/configs/train_1.yaml
@@ -4,7 +4,7 @@ defaults:
   - metrics: ArgMax_BeamSearch
   - datasets: train_clean_360
   - dataloader: kaggle
-  - transforms: batch_transforms
+  - transforms: basic
   - text_encoder: BpeEncoder
   - _self_
 optimizer:
