--- a/src/configs/train_1.yaml
+++ b/src/configs/train_1.yaml
@@ -2,7 +2,7 @@ defaults:
   - model: conformer
   - writer: wandb
   - metrics: ArgMax_BeamSearch
-  - datasets: train_clean_360
+  - datasets: train_all
   - dataloader: kaggle
   - transforms: basic
   - text_encoder: BpeEncoder
