--- a/src/configs/train_1.yaml
+++ b/src/configs/train_1.yaml
@@ -4,7 +4,7 @@ defaults:
   - metrics: ArgMax_BeamSearch
   - datasets: train_all
   - dataloader: kaggle
-  - transforms: basic
+  - transforms: only_instance
   - text_encoder: BpeEncoder
   - _self_
 optimizer:
@@ -29,7 +29,7 @@ trainer:
   resume_from: null # null or path to the checkpoint dir with *.pth and config.yaml
   device: auto # device name or "auto"
   override: False # if True, will override the previous run with the same name
-  monitor: "off" # "off" or "max/min metric_name", i.e. our goal is to maximize/minimize metric
+  monitor: "min test_WER_(BeamSearch)" # "off" or "max/min metric_name", i.e. our goal is to maximize/minimize metric
   save_period: 1 # checkpoint each save_period epochs in addition to the best epoch
   early_stop: ${trainer.n_epochs} # epochs for early stopping
   save_dir: "saved"
