--- a/src/configs/train_clean_360_1.yaml
+++ b/src/configs/train_clean_360_1.yaml
@@ -23,11 +23,11 @@ loss_function:
   _target_: src.loss.CTCLossWrapper
 trainer:
   log_step: 50
-  n_epochs: 12
+  n_epochs: 50
   # epoch_len: 100
   device_tensors: ["spectrogram", "text_encoded"] # which tensors should be on device (ex. GPU)
   resume_from: null # null or path to the checkpoint dir with *.pth and config.yaml
-  device: auto # device name or "auto"
+  device: "cuda:0" # device name or "auto"
   override: False # if True, will override the previous run with the same name
   monitor: "min test_WER_(BeamSearch)" # "off" or "max/min metric_name", i.e. our goal is to maximize/minimize metric
   save_period: 1 # checkpoint each save_period epochs in addition to the best epoch
