--- a/src/configs/train_clean_360_1.yaml
+++ b/src/configs/train_clean_360_1.yaml
@@ -16,8 +16,8 @@ optimizer:
 lr_scheduler:
   _target_: torch.optim.lr_scheduler.OneCycleLR
   max_lr: 0.0042
-  pct_start: 0.15
-  epochs: 100 
+  pct_start: 0.6
+  epochs: ${trainer.n_epochs}  
   anneal_strategy: cos
 loss_function:
   _target_: src.loss.CTCLossWrapper
