--- a/src/configs/train_clean_360_1.yaml
+++ b/src/configs/train_clean_360_1.yaml
@@ -32,7 +32,7 @@ trainer:
   resume_from: null # null or path to the checkpoint dir with *.pth and config.yaml
   device: "cuda:0" # device name or "auto"
   override: False # if True, will override the previous run with the same name
-  monitor: "min test_WER_(BeamSearch)" # "off" or "max/min metric_name", i.e. our goal is to maximize/minimize metric
+  monitor: "off" # "off" or "max/min metric_name", i.e. our goal is to maximize/minimize metric TODO return back
   save_period: 1 # checkpoint each save_period epochs in addition to the best epoch
   early_stop: ${trainer.n_epochs} # epochs for early stopping
   save_dir: "saved"
