I dont know how to fix the problem of sorted bpe

--- a/src/configs/ablation_BPE.yaml
+++ b/src/configs/ablation_BPE.yaml
@@ -7,6 +7,9 @@ defaults:
   - transforms: basic 
   - text_encoder: CTCEncoder
   - _self_
+partition_for_bpe:
+  _target_: src.datasets.LibrispeechDataset
+  part: "train-clean-100"
 optimizer:
   _target_: torch.optim.AdamW
   lr: 1e-4
@@ -29,7 +32,7 @@ trainer:
   resume_from: null # null or path to the checkpoint dir with *.pth and config.yaml
   device: "cuda:0" # device name or "auto"
   override: False # if True, will override the previous run with the same name
-  monitor: "min test_WER_(BeamSearch)" # "off" or "max/min metric_name", i.e. our goal is to maximize/minimize metric
+  monitor: "min test_WER_(BeamSearch)" # "off" or "max/min metric_name", i.e. our goal is to maximize/minimize metric TODO return back
   save_period: 1 # checkpoint each save_period epochs in addition to the best epoch
   early_stop: ${trainer.n_epochs} # epochs for early stopping
   save_dir: "saved"
