--- a/src/configs/inference_all_metrics.yaml
+++ b/src/configs/inference_all_metrics.yaml
@@ -1,10 +1,11 @@
 defaults:
   - model: conformer
   - writer: wandb
-  - metrics: ArgMax_BeamSearch
-  - datasets: custom_dataset
+  - metrics: ArgMax_BeamSearch #change
+  - datasets: inference_clean
   - dataloader: local
   - transforms: basic
+  # - text_encoder: CTCEncoder #change
   - text_encoder: BpeEncoder
   - _self_
 inferencer:
@@ -13,6 +14,5 @@ inferencer:
   save_path: "example"
   seed: 1
   sample_rate: ${transforms.instance_transforms.train.get_spectrogram.sample_rate}
-  show_augs: False
-  from_pretrained: "saved/Run_kaggle/checkpoint-epoch17.pth"
-  dataset_dir: null #path where the dataset contains for custom_dataset.yaml
+  # from_pretrained: "saved/ablation_BPE/model_best.pth"
+  from_pretrained: "saved/train_clean_360_1/model_best.pth"
