--- a/src/configs/show_augs.yaml
+++ b/src/configs/show_augs.yaml
@@ -1,23 +1,9 @@
 defaults:
-  - model: conformer
   - writer: wandb
-  - metrics: ArgMax_BeamSearch
   - datasets: train_clean_360
-  - dataloader: local
   - transforms: basic
-  - text_encoder: CTCEncoder
   - _self_
 trainer:
   show_examples: 6
-  show_augs: True
-  device_tensors: ["spectrogram", "text_encoded"] # which tensors should be on device (ex. GPU)
-  resume_from: null # null or path to the checkpoint dir with *.pth and config.yaml
-  device: auto # device name or "auto"
-  override: False # if True, will override the previous run with the same name
-  monitor: "off" # "off" or "max/min metric_name", i.e. our goal is to maximize/minimize metric
-  save_period: 5 # checkpoint each save_period epochs in addition to the best epoch
-  early_stop: ${trainer.n_epochs} # epochs for early stopping
-  save_dir: "saved"
-  seed: 1
-  grad_acum: 1
   sample_rate: ${transforms.instance_transforms.train.get_spectrogram.sample_rate}
+  save_dir: save
