--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "datasets==4.2.0",
     "editdistance==0.8.1",
     "einops==0.8.1",
+    "gdown>=5.2.0",
+    "gdrive>=0.1.5",
     "hydra-core==1.3.2",
     "ipykernel==7.0.0",
     "isort==6.1.0",
